1. Content corrections updated.
2. Extra unwanted space removed.

--- a/Docusaurus/sf-documentation/src/css/custom.css
+++ b/Docusaurus/sf-documentation/src/css/custom.css
@@ -668,6 +668,9 @@ article ul.table-of-contents li:hover{
   height: unset;
   max-width: unset;
 }
+.order_list li{
+  list-style-type:  decimal;
+}
 @media screen and (max-width: 550px) and (min-width: 320px) {
   nav.navbar--fixed-top{
       height: 85px;
